Fixed Tab Title Overflow

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -110,8 +110,9 @@ body, html {
 }
 
 .tab {
-  display: inline-block;
-  max-width: 250px; /* Set your desired max-width */
+  display: flex;
+  align-items: center; 
+  max-width: 250px;
   padding: 8px 16px;
   font-family: 'Roboto', sans-serif;
   background-color: var(--tab-background);
@@ -123,6 +124,15 @@ body, html {
   margin-right: 5px;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.tab-title {
+  flex: 1;
+  max-width: 220px;
+  white-space: nowrap;
+  overflow: hidden;
+  align-items: center;
+  align-self:center;
   text-overflow: ellipsis;
 }
 
@@ -130,23 +140,28 @@ body, html {
   background-color: var(--tab-border);
 }
 
-.tab-content {
-  display: flex;
-  align-items: center;
-}
-
 .favicon {
   width: 25px;
   height: 25px;
   margin-right: 5px;
-  vertical-align: top;
+  align-items: center;
+  align-self:center;
+  padding: 0;
 }
 
-.tab-title {
-  font-size: 14px;
-  vertical-align: middle;
-  overflow: hidden;
-  text-overflow: ellipsis;
+.close-tab-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 50%;
+  margin-left: 15px;
+  padding: 0 3px;
+  color: var(--text-color);
+  transition: background-color 0.4s;
+}
+
+.close-tab-button:hover {
+  background-color: rgba(0, 0, 0, 0.25);
 }
 
 
@@ -173,22 +188,6 @@ body, html {
 }
 
 .control-button:hover {
-  background-color: rgba(0, 0, 0, 0.25);
-}
-
-.close-tab-button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  margin-top: 2px;
-  border-radius: 50%;
-  margin-left: 17px;
-  padding: 3px;
-  color: var(--text-color);
-  transition: background-color 0.4s;
-}
-
-.close-tab-button:hover {
   background-color: rgba(0, 0, 0, 0.25);
 }
 
